5.1.8~beta1 (2015-08-22)
[fix] playback of VEVO videos - some videos still using discontinued ITAG13

5.1.7 (2015-07-15)
ADD: quota optimization via separate key for none-token depended API calls
UPD: new login semantic to sign out if someone upgrades to a newer version of KODI
FIX: 'Next Page (X)' item was added to the current playlist for playback

5.1.6 (2015-06-14)
ADD: Chinese (Traditional) (thx 2 beddfaf916)
ADD: Czech (thx 2 tomaswcz)
ADD: Romanian (thx 2 Danny3)
UPD: test some new pagination for 'My Subscriptions'
UPD: Polish (thx 2 Etharr)
FIX: show notification again for unsupported rtmpe streams
FIX: unicode/utf-8 trouble in kodion

5.1.5 (2015-05-29)
UPD: remove deprecation warning for Isengard
FIX: Issue 7163 (Missing pagination for subscriptions - YouTube APIv3 bug)

5.1.4 (2015-05-26)
ADD: Frodo support (only if you install via zip or bromix repo)
UPD: new API-KEY - thanks to the guy for hijacking the key for trailer searches
UPD: UPD: Russian (thx 2 BytEvil)
FIX: cache wasn't working correctly without login

5.1.3 (2015-05-16)
UPD: code cleaning
FIX: minor fixes

5.1.2 (2015-05-15)
ADD: ask for video quality (optional)
UPD: code cleaning
UPD: Russian (thx 2 BytEvil)
UPD: kodion
FIX: add 'Play all' for playlist (again)

5.1.1 (2015-05-10)
ADD: 'More...' in context menu to provide more items
ADD: show deprecation warning of old plugin calls starting with Isengard
ADD: EndPoint: 'plugin://plugin.video.youtube/search/?q=[URL_ENC_TEXT]'
ADD: API Key for each major version of KODI
UPD: Ukrainian (thx 2 Dukobpa3)
UPD: Russian (thx 2 BytEvil)
UPD: new second fanart
UPD: reorganized context menu
UPD: improved logging (debug only)
UPD: Improved error handling
FIX: refresh after rating a video (own playlist only)
FIX: add 'refresh' again for 'My subscriptions'
DEL: removed old v2 API

5.1.0 (2015-04-22)
ADD: Double login to support 'My subscriptions' via YouTube TV API
ADD: 'More Links from the description' - extracts further links from the description